ros2_ws/log/build_2020-10-17_00-57-46/py_pubsub/stderr.log
  File "/home/shorouk/ros2_ws/install/py_pubsub/lib/python3.6/site-packages/py_pubsub/subscriber_member_function.py", line 45
    else if(msg1.data==' 6'):
          ^
SyntaxError: invalid syntax

